--- a/src/assets/sass/base/_variables.scss
+++ b/src/assets/sass/base/_variables.scss
@@ -2,8 +2,16 @@ $btn-color: #111b47;
 $promo-description-color: #505f98;
 $header-links-hover: #1843ee;
 $mobile-color: #fff;
-$logo-color: #37447E;
+$logo-color: #37447e;
 
-$second-sections-color: #6f7cb2;
+$about-description-color: #6f7cb2;
 $footer-nav-color: #929ecc;
 $titles-color: #091133;
+$card-description-color: #5d6970;
+
+$devider-color: #CDD1D4;
+$footer-color: #E7ECFF;
+$copyrate-color: #939EA4;
+
+$footer-social-links: #b0b8bc;
+$footer-social-links-hover: #485053;
