--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -5,6 +5,10 @@
 @import 'base/mixins';
 
 @import 'blocks/container/container.scss';
+@import 'blocks/logo/logo';
 @import 'blocks/promo/promo';
 @import 'blocks/header/header';
 @import 'blocks/titles/title';
+@import 'blocks/about/about';
+@import 'blocks/info/info';
+@import 'blocks/footer/footer';
