--- a/src/assets/sass/blocks/container/_container.scss
+++ b/src/assets/sass/blocks/container/_container.scss
@@ -27,3 +27,10 @@
     max-width: 1140px;
   }
 }
+
+@media (min-width: 1250px) {
+  .container_xl {
+    max-width: 1440px;
+    padding: 0 165px 0 0;
+  }
+}
