--- a/src/assets/sass/blocks/header/_header.scss
+++ b/src/assets/sass/blocks/header/_header.scss
@@ -45,10 +45,7 @@
     }
   }
   &__logo {
-    display: block;
-    text-decoration: none;
     color: $mobile-color;
-    font-weight: 900;
     font-size: 26px;
     &:active {
       color: inherit;
@@ -59,7 +56,6 @@
     display: block;
     text-decoration: none;
     color: $mobile-color;
-    font-weight: 500;
   }
 
   &-burger {
@@ -68,12 +64,26 @@
     top: 15px;
     right: 15px;
     span {
+      transition: 0.5s all;
       display: block;
       height: 2px;
       background-color: #000;
-      margin: 4px 0 0 0;
-      &:first-child {
-        margin: 0;
+      margin: 0 0 2px 0;
+    }
+    &_active {
+      display: block;
+      span {
+        margin: 0 0 -2px 0;
+        &:nth-of-type(1) {
+          transform: translateY(6px) rotate(-45deg);
+          margin: -1;
+        }
+        &:nth-of-type(2) {
+          display: none;
+        }
+        &:nth-of-type(3) {
+          transform: translateY(6px) rotate(45deg);
+        }
       }
     }
   }
