completed project and test task js

--- a/src/assets/sass/blocks/promo/_promo-media.scss
+++ b/src/assets/sass/blocks/promo/_promo-media.scss
@@ -46,12 +46,13 @@
     &__title {
       font-size: 50px;
       line-height: 66px;
+      letter-spacing: 1px;
     }
     &__description {
       line-height: 30px;
     }
     &__btns {
-      margin: 69px 0 0 0;
+      margin: 54px 0 0 0;
     }
     &__btn {
       transition: 0.5s all;
