--- a/src/assets/sass/blocks/header/_header.scss
+++ b/src/assets/sass/blocks/header/_header.scss
@@ -25,7 +25,7 @@
     left: -100%;
     width: 50%;
     min-height: 100vh;
-    background-color: rgba($color: #000000, $alpha: 0.6);
+    background-color: rgba($color: $promo-description-color, $alpha: 0.8);
     display: flex;
     flex-direction: column;
     transition: 1.5s all;
@@ -66,23 +66,23 @@
     span {
       transition: 0.5s all;
       display: block;
-      height: 2px;
-      background-color: #000;
-      margin: 0 0 2px 0;
+      height: 4px;
+      background-color: $promo-description-color;
+      margin: 0 0 4px 0;
     }
     &_active {
       display: block;
       span {
-        margin: 0 0 -2px 0;
+        margin: 0 0 -4px 0;
         &:nth-of-type(1) {
-          transform: translateY(6px) rotate(-45deg);
+          transform: translateY(5px) rotate(-45deg);
           margin: -1;
         }
         &:nth-of-type(2) {
           display: none;
         }
         &:nth-of-type(3) {
-          transform: translateY(6px) rotate(45deg);
+          transform: translateY(5px) rotate(45deg);
         }
       }
     }
