--- a/src/assets/sass/blocks/promo/_promo-media.scss
+++ b/src/assets/sass/blocks/promo/_promo-media.scss
@@ -3,6 +3,13 @@
     &__about {
       width: 50%;
     }
+    &__description {
+      display: block;
+      margin: 20px 0 0 0;
+      font-size: 14px;
+      line-height: 16px;
+      color: $promo-description-color;
+    }
   }
 }
 
