--- a/src/assets/sass/blocks/promo/_promo.scss
+++ b/src/assets/sass/blocks/promo/_promo.scss
@@ -1,20 +1,17 @@
 .promo {
-  min-height: 100vh;
-  padding: 50px 0 0 0;
-  background: url('../img/promobg.png') top right/auto no-repeat;
+  min-height: 400px;
+  padding: 60px 0 0 0;
+  background: url('../img/promobg.png') top right/contain no-repeat;
 
   &__title {
     font-size: 20px;
     line-height: 25px;
   }
   &__description {
-    margin: 20px 0 0 0;
-    font-size: 14px;
-    line-height: 16px;
-    color: $promo-description-color;
+    display: none;
   }
   &__btns {
-    margin: 20px 0 0 0;
+    margin: 60px 0 0 0;
     display: flex;
     flex-direction: column;
     max-width: 125px;
